Products.CMFDefault Changelog
=============================

2.3.0-alpha (unreleased)
------------------------

- browser views: Added SettingsEditFormBase.
  This can be used for edit forms for global settings.

- Require at least Zope 2.13.4.

- profiles and upgrade: Added support for using the new OFS UserFolder class.

- views: Added Unauthorized exception view.
  This replaces CookieCrumbler's old redirect support.

- Deal with deprecation warnings for Zope 2.13.

- Use the standard libraries doctest module.

- skins: Removed unused styles from css.

- Use the optional five.formlib extension in favor of Products.Five.formlib.

- Removed testing dependency on zope.app.testing.

- Upgrade steps: Merged faulty utility registration fixup script,
  tool utility registration and new-style actions upgrade from 
  an older migration script in Products.CMFCore for pre-2.1.0 
  instances into GenericSetup upgrade steps

- WorkflowTool/DiscussionItem: Create a set of GenericSetup 
  upgrade steps to instantiate the new single-state workflow 
  for Discussion Items and associate it with the content type.

- MetadataTool: Replaced write-on-read upgrade for the Dublin Core
  metadata definitions with a set of GenericSetup upgrade steps.
  
- SyndicationTool: Updated to produce RSS 2.0. Uses an adapter for
  syndication information.

2.2.0-beta (2009-12-06)
-----------------------

- MetadataTool: Improved tool initialization.
  This prevents write-on-read behavior of newly created tool instances.

- views: Improved ContentAddFormBase.
  Permissions and container constraints are now checked by the '__call__'
  method. There is no need to add security declarations for derived add forms.

- upgrade: Added more upgrade steps.
  There is now support for upgrading the step registrations in the setup tool,
  the columns in the catalog tool and the icons in the actions tool and
  in workflow definitions.

- upgrade: Improved upgrade step for type properties.